about page - displays backend_project 5 extra webpages added CSS & Javascript shared to all html via extending base.html Redirections add for /javascript /js /home 404 and Admin pages left TODO

--- a/backend_project/templates/about.html
+++ b/backend_project/templates/about.html
@@ -1,10 +1,45 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>About Page</h2>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad fuga aspernatur obcaecati odit labore eligendi officiis
-    facere, cum deleniti necessitatibus at tenetur autem facilis aliquam voluptatem aliquid possimus minus praesentium
-    aut cumque aperiam. Repellat ullam deleniti iste a nisi facilis perferendis ratione amet necessitatibus, molestiae
-    ipsa asperiores magnam dolore inventore!</p>
-    
+<h2>PROJECT NAME: JavaScript Companion Website (BackEnd)</h2>
+<h3>PROJECT BRIEF:</h3>
+<p>
+    As a junior developer, you are asked to create a BackEnd to one of
+    your colleagues’ FrontEnd projects.
+</p>
+<p>
+    The project is a one page website for observing a selection of events
+    in JavaScript. However, the website will be expanded in the coming
+    months and therefore requires a BackEnd that can support future
+    growth.
+</p>
+<p>
+    Your colleague requires you to build a structure with the microframework
+    Flask. This structure must be able to support the following:
+</p>
+
+<ol>
+    <li>Minimum of 5 different web pages.</li>
+    <li>Both CSS and JavaScript (linked to all available pages).</li>
+    <li>Basic 404 Error-Handling</li>
+    <li>Redirect for extensions: ‘/javascript’, ‘/js' and ‘/home’.</li>
+    <li>Admin extension for a separate administration page.</li>
+</ol>
+BONUS CRITERIA:
+<p>
+    Your colleague has often complained that repeatedly copying and
+    pasting links, and shared elements across web pages is a nightmare.
+    This has even lead to minor errors which required extended debugging
+    in order to find and fix.
+</p>
+<ul>
+    <li>Add additional support to improve this process (or replace it altogether).</li>
+</ul>
+<h3>REQUIREMENTS:</h3>
+<p>
+    You are not allowed to alter the content of any HTML, CSS or
+    JavaScript files. However, you are allowed to update links and/or add
+    templating.
+</p>
+
 {% endblock %}
