--- a/backend_project/templates/page1.html
+++ b/backend_project/templates/page1.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Contact Page</h2>
+<h2>Extended Page1</h2>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto magni iste soluta hic id distinctio modi ipsam
     deserunt itaque! Aliquam placeat laborum quisquam doloribus quam! Similique laboriosam sed deserunt excepturi
     ducimus autem exercitationem ipsa blanditiis quo temporibus delectus, est at eum dolore odit, aut nemo praesentium,
