--- a/backend_project/templates/index.html
+++ b/backend_project/templates/index.html
@@ -1,10 +1,80 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- As index.html was moved to the templates folder, the next two relative links were updated -->
+    <link rel="stylesheet" href="../static/main.css".css">
+    <script src="../static/app.js"></script>
 
-{% block content %}
-<h2>Home Page</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda commodi aperiam corrupti minima, impedit dolorem
-    saepe perferendis soluta porro iure nobis hic ab iste debitis voluptate eum reiciendis? Sint odit veritatis porro ad
-    distinctio sapiente aliquam est suscipit cumque, non dolore quod et nesciunt aliquid sit neque ratione quibusdam
-    impedit.</p>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Events</title>
+</head>
+<body onload="checkCookies()">
+    <div class="flex-container-h">
+    <div>
+    <h1>JavaScript Events</h1>
+    <div class="flex-container-h">
+        <button>Dark Mode</button>
+    </div>
+    <h2>Innovate Coding</h2>
+    <p id="intro-text">This is an interactive website for demonstrating a selection of events in JavaScript.</p>
 
-{% endblock %}
+    <br>
+
+    <div class="main-box">
+    <h3 class="main-title">onclick Events</h3>
+    <p class="main-text">This is an event that occurs as a result of the user 'clicking' a specific element.</p>
+    <p onclick="changeText(this)" class="example-text">click this text to change it</p>
+    <div class="flex-container-h2">
+    <button onclick="displayDate(date)" class="example-button">Display Date</button>
+    <p class="example-text" id="date"></p>
+    </div>
+    </div>
+
+    <br>
+    <br>
+
+    <div class="main-box">
+    <h3 class="main-title">onload Events</h3>
+    <p class="main-text">This is an event that occurs as soon as the user has loaded the web page.</p>
+    <p class="example-text" id="cookie"></p>
+    </div>
+
+    <br>
+    <br>
+
+    <div class="main-box">
+    <h3 class="main-title">Mouse Events</h3>
+    <p class="main-text">This is an event that occurs when the user moves their cursor over a specific element.</p>
+    <div class="flex-container-h3">
+        <div onmouseover="mOver(this)" onmouseout="mOut(this)" class="colour-box example-text">
+        </div>
+        <div onmouseover="mOver(this)" onmouseout="mOut(this)" class="colour-box example-text">
+        </div>
+        <div onmouseover="mOver(this)" onmouseout="mOut(this)" class="colour-box example-text">
+        </div>
+    </div>
+    </div>
+
+    <br>
+    <br>
+
+    <div class="main-box">
+    <h3 class="main-title">Extra:</h3>
+        <p class="main-text">Additional features that can be used in developing a website with JavaScript.</p>
+        <h4 class="main-text">Alert</h4>
+
+        <p class="main-text">An alert is used to notify the user via a pop-up window.</p>
+        <button onclick="sendAlert()" class="example-button">Display Host Name</button>
+        <h4 class="main-text">Toggle</h4>
+        <p class="main-text">TBC</p>
+    </div>
+
+    <br>
+    <br>
+
+    </div>
+    </div>
+</body>
+</html>
