--- a/backend_project/templates/base.html
+++ b/backend_project/templates/base.html
@@ -15,6 +15,7 @@ extends 'base.html' at the top of every page we want the content to appear  -->
     
     <header>
         <nav>
+            <a href="{{ url_for('alias.admin')}}">Admin</a> 
             <a href="{{ url_for('alias.home')}}">Javascript Original</a> 
             <a href="{{ url_for('alias.about')}}">About Project</a>
             <a href="{{ url_for('alias.page1')}}">Page1</a>
