--- a/backend_project/templates/base.html
+++ b/backend_project/templates/base.html
@@ -7,10 +7,12 @@ extends 'base.html' at the top of every page we want the content to appear  -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'main.css')}}"> 
     <link rel="stylesheet" href="{{url_for('static', filename = 'style.css')}}"> 
-    <link rel="script" href="{{url_for('static', filename = 'app.js')}}"> 
-    <title>base page</title>
+    <script src="{{url_for('static', filename = 'app.js')}}" ></script>
+    <title>JavaScript Events</title>
 </head>
+
 <body>
     
     <header>
