--- a/backend_project/static/style.css
+++ b/backend_project/static/style.css
@@ -1,16 +1,16 @@
-
-
 /*  next three commented changes were made after original styling was applied
     site wide
 body { removed selector as it is redundant
     background-color: rgb(245, 247, 255);
 } */
 
-nav { 
+nav {
     display: flex;
     justify-content: space-evenly;
-    background-color: rgb(245, 247, 255); /* added after original...  */
-    color: black;                         /* added after original...  */
+    background-color: rgb(245, 247, 255);
+    /* added after original...  */
+    color: black;
+    /* added after original...  */
 }
 
 #admin_window {
@@ -32,5 +32,16 @@ nav {
     display: block;
     width: 75%;
     background-color: ivory;
-    
+
+}
+
+/* add darkmode style toggles */
+.dark-mode {
+    background-color: lightblue;
+    color: rgb(56, 56, 56);
+}
+
+.dark-modeb {
+    background-color: rgb(99, 93, 93);
+    color: white;
 }
