--- a/backend_project/templates/index.html
+++ b/backend_project/templates/index.html
@@ -2,12 +2,17 @@
 
 {% block content %}
 
-<body onload="checkCookies()">
+<!--
+    <body onload="checkCookies();">
+    needed to also reset "dark to light" to onload startup
+-->
+<body onload="doDarkCookies()">
     <div class="flex-container-h">
         <div>
             <h1>JavaScript Events</h1>
             <div class="flex-container-h">
-                <button>Dark Mode</button>
+                <!-- addd onclick event to enable darkmode function -->
+                <button onclick="darkmode()">Dark Mode</button>
             </div>
             <h2>Innovate Coding</h2>
             <p id="intro-text">This is an interactive website for demonstrating a selection of events in JavaScript.</p>
