--- a/backend_project/templates/404.html
+++ b/backend_project/templates/404.html
@@ -3,6 +3,6 @@
 <!-- denote the beginning of this html file's flask pre processible content -->
 
 {% block content %}
-<h3>Error Page</h3>
+<h3>404 Error Page</h3>
 <h4> There was an error - <br> {{e}}</h4>
 {% endblock %}
